<resources>
    <string name="app_name">MyCup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="measure_content1">어렸을 때부터 여성은 자신의 성기를 만지면 안 되는 곳이며, 에둘러 표현하거나 감추도록 교육받아왔습니다.\n\n내 몸의 일부이면서 어떻게 생겼는지조차 모르고 살아간다면 내 몸이 내 것일 수 있을까요? 공포는 대부분 무지에서 나옵니다. 월경컵 도전에 앞서 거울을 이용해 내 몸을 탐구하고 익숙해지는 것이 첫걸음입니다.</string>
    <string name="measure_content2">질 입구에서부터 혈이 나오는 포궁 경부까지의 높이입니다. 월경컵은 질 안에 넣어서 사용하는 제품이므로 입문 전 질 길이 측정을 권장합니다.</string>
    <string name="measure_content3">질 길이는 월경 기간에 평소보다 짧아지기 때문에 월경 중에 측정해야 합니다.</string>
    <string name="measure_content4">1) 우선 손을 깨끗이 씻어주세요.\n\n2) 몸에 힘이 덜 들어가 보다 질 길이 측정이 쉬운\n     변기에 앉은 자세를 취해주세요.\n\n3) 천천히 중지 손가락을 넣어 포궁 경부까지\n     몇 마디가 들어가는지 확인해 주세요.</string>
    <string name="measure_content5">*포궁 경부는 콧등처럼 단단한 느낌으로 점액질로 덮여 있으며,\n질은 수직이 아닌 꼬리뼈 방향으로 비스듬히 누워있습니다.</string>
    <string name="measure_content6">중지 손가락이 두 마디 이하로 들어간다면 30~45mm, 두 마디에서 세 마디쯤 들어간다면 50~60mm, 세 마디 이상 들어간다면 높은 포궁의 소유자입니다.\n\n질은 유연한 근육조직이기 때문에 내 질 길이보다 약 1cm 정도 긴 컵을 골라야 해요. 마이컵이 질 길이마다 적당한 컵들을 모아봤으니 탐색탭에서 확인해보세요!</string>

    <string name="manage_content1">월경주기 시작 시, 월경주기 끝난 후 월경컵 열탕 소독이 필요하며 주기 중에는 찬물에 깨끗이 씻어 재사용하면 됩니다.\n다만 월경주기가 길거나 질 관련 염증 감염에 취약하다면 주기 중에도 자주 열탕 소독할 것을 추천해요.</string>
    <string name="manage_content2">독성쇼크증후군의 원인이 되는 포도상구균은 열에 약해 80~100℃의 끓인 물에 5분간 담가 열탕 소독하면 사멸됩니다. 따라서,</string>
    <string name="manage_content3">1) 월경컵이 물에 충분히 잠길만한 머그컵에\n
     전기주전자로 끓인 물을 부어 5분간 열탕하거나\n\n
2) 냄비에 물을 끓여 월경컵을 잠기게끔 넣고\n
     냄비에 닿지 않도록 주의하여 3분간 열탕하거나\n\n
3) 전자레인지 사용이 가능한 용기에\n
     월경컵과 컵이 잠길 정도의 물을 넣어\n
     1분 30초간 열탕하면 됩니다.</string>
    <string name="manage_content4">열탕 후엔 완전 건조 후 파우치나 열탕 소독된 통에 보관해 주세요.</string>

    <string name="use_content1">월경컵의 사용기간은 브랜드마다 조금씩 차이가 있지만 평균적으로 2~3년이며, 월경컵 형태의 변형이나 손상 혹은 탄성이 떨어졌다면 새로운 월경컵으로 교체해야 합니다.</string>
    <string name="use_content2">1) 소독을 마친 월경컵을 준비한 뒤 \n
    비누를 사용하여 손을 깨끗이 씻어주세요.\n\n
2) 온몸에 긴장을 풀고 변기에 등을 뒤로 기울이듯이\n
     앉아 시도하거나 한 다리만 변기에 올려놓고\n
     시도하는 등 다양한 자세를 시도하여 편안한\n
     자세를 찾아주세요.\n\n
3) 월경컵의 가운데를 중심으로 접어 C 모양을 만드는 \n
      C 폴드, 입구의 한 부분을 꾹 눌러 월경컵 안쪽으로\n
      들어가게끔 접는 펀치다운 등의 방법으로 월경컵을 \n
      접어 단단히 잡고 질 안으로 넣어줍니다.\n
      질 안에 완전히 넣어 포궁 경부까지 부드럽게 \n
      밀어준 후 월경컵을 놓으면 펼쳐집니다.\n\n
4) 월경컵 밑 부분을 만졌을 때 굴곡이 없으며 \n
      월경컵의 꼬리를 잡아당겼을 때 빠지지 않고 \n
      버티는 힘이 느껴진다면 실링이 잘 된 것입니다. \n
      월경컵이 잘 펴지지 않았을 경우 월경컵의 밑 부분을 \n
      조금씩 눌러주거나 위아래로 움직여주면 \n
      월경컵이 굴곡 없이 펼쳐지게 됩니다.</string>
    <string name="use_content3">월경컵이 잘 펴지지 않았거나 크기가 안 맞는 경우 월경혈이 샐 수 있으니 잘 확인해 주세요.</string>

    <string name="change_content1">월경컵은 3시간에서 12시간까지 착용 가능하며 4시간마다 교체하기를 권장합니다.</string>
    <string name="change_content2">1) 비누를 사용하여 손을 깨끗이 씻어주세요.\n\n2) 변기에 앉아 케겔 운동 혹은 배변하듯 힘을 주면\n     위로 올라가 있던 월경컵이 조금씩 내려옵니다.\n     월경컵이 잘 잡히지 않을 경우 당황하지 않는 것이 중요해요.\n     아무리 월경컵이 멀리 있는 것 같아도 질은 \n     중지 손가락 정도의 깊이를 가졌다는 것을 잊지 마세요.\n\n3) 꼬리가 잡힐 정도로 내려오면 월경컵의 밑 부분을\n     꼬집듯이 잡아서 비틀어주세요.\n     이때, 월경컵과 질 내부에 공기가 들어가 \n     실링이 해제되어 부드럽게 꺼낼 수 있습니다.\n\n4) 혈을 변기에 조심스럽게 흘려보낸 뒤\n     착색 예방을 위해 찬물에 깨끗이 헹궈주세요.\n\n5) 물기를 털어 다시 착용하고\n     실링이 잘 되었는지 확인해 줍니다.</string>

    <string name="talk_content1">언어에 반영된 성 고정관념은 개인의 무의식과 통념의 기반이 되어 의식하지 않은 상황에 성차별과 고정관념을 강화하게 됩니다.\n우리가 일상생활에서 사용하고 있는, 하지만 성차별 요소가 포함되어 있는 단어는 무엇이 있는지 알아볼까요?</string>
    <string name="talk_content2">생리는 여성들의 월경주기를 생리적 현상이라 하여 에둘러 표현한 것으로 월경을 수치스럽거나 숨겨야 할 것으로 터부시하는 인식에서 비롯되었습니다.\n월경은 부끄러운 생리현상이 아닌 새로운 생명을 창조하는 놀라운 힘의 원천입니다.</string>
    <string name="talk_content3">우리나라는 아들 子가 아이를 대표하는 보통명사로 사용되어 왔으며 자궁은 이 아들 子를 사용하여 아이가 자라는 집을 뜻합니다. 사전적인 의미는 이러하지만 아들을 의미하는 한자로 인해 남아선호사상이 녹아있다는 지적을 받고 있습니다.\n따라서 최근에는 성 중립적 대안 언어로 아들 子 대신 세포 胞을 사용하여, 아들을 낳기 위한 수단이 아닌 세포가 자라는 집 ‘포궁’으로 대체하고 있는 추세입니다.</string>
    <string name="talk_content4">국립국어원은 2021년 2분기 표준국어대사전 정보 수정 과정에서 처녀막의 뜻풀이를 삭제하고, 이를 대신하는 의학용어인 질 입구 주름을 추가했습니다. 이는 여성의 정조 및 처녀의 상징으로 사용되는 처녀막이라는 단어가 성관계와는 관계없이 신체 부위를 지칭한다는 점에서 전문 용어로 대체한 것입니다.\n많은 여성들에게 삽입형 월경 용품의 선택지를 배제시켰던 처녀막 신화, 올바른 언어 사용으로부터 자유로워질 수 있습니다!</string>
</resources>