<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".info.MeasureActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

<!--                <ImageView-->
<!--                    android:id="@+id/img_measure"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@drawable/img_measure"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

                <ImageView
                    android:id="@+id/img_measure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_measure"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="#80000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_measure_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/btn_back"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="질 길이 측정 방법"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintBottom_toBottomOf="@+id/img_measure"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_light_italic"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/measure_content1"
                    android:textColor="@color/gray_a7"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_measure" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="질 길이란?"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv1" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/measure_content2"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv2" />

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="측정방법"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv3" />

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/measure_content3"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv4" />

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/roboto_medium"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="1) 우선 손을 깨끗이 씻어주세요.\n\n2) 몸에 힘이 덜 들어가 보다 질 길이 측정이 쉬운\n     변기에 앉은 자세를 취해주세요.\n\n3) 천천히 중지 손가락을 넣어 포궁 경부까지 몇 마디가\n     들어가는지 확인해 주세요."
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv5" />

                <TextView
                    android:id="@+id/tv7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_light"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="@string/measure_content5"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv6" />


                <TextView
                    android:id="@+id/tv8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="시작이 반이다, 질 탐색을 마쳤다면"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv7" />

                <TextView
                    android:id="@+id/tv9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/roboto_regular"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/measure_content6"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv8" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
