<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".info.TalkActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

<!--                <ImageView-->
<!--                    android:id="@+id/img_talk"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@drawable/img_talk"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

                <ImageView
                    android:id="@+id/img_talk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_talk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="#80000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_talk_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/btn_back"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="30dp"
                    android:text="월경? 포궁? 질 주름?\n언어에 반영되는 성 고정관념"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_talk"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_light_italic"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/talk_content1"
                    android:textColor="@color/gray_a7"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_measure" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="생리 vs 월경"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv1" />

                <TextView
                    android:id="@+id/tv22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_light"
                    android:includeFontPadding="false"
                    android:lineHeight="18dp"
                    android:text="| 루나컵 e-가이드북"
                    android:textColor="@color/gray_66"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv2"
                    app:layout_constraintStart_toEndOf="@+id/tv2" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/talk_content2"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv2" />

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="자궁 vs 포궁"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv3" />

                <TextView
                    android:id="@+id/tv44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_light"
                    android:includeFontPadding="false"
                    android:lineHeight="18dp"
                    android:text="| 루나컵 e-가이드북"
                    android:textColor="@color/gray_66"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv4"
                    app:layout_constraintStart_toEndOf="@+id/tv2" />

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/talk_content3"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv4" />

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="처녀막 vs 질 주름"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv5" />

                <TextView
                    android:id="@+id/tv7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/roboto_regular"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/talk_content4"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv6" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
