<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".info.ManageActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

<!--                <ImageView-->
<!--                    android:id="@+id/img_manage"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@drawable/img_maintain"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

                <ImageView
                    android:id="@+id/img_manage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_maintain"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="#80000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_manage_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/btn_back"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="월경컵 관리법"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_manage"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_light_italic"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/manage_content1"
                    android:textColor="@color/gray_a7"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_measure" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:lineHeight="16dp"
                    android:text="열탕 소독 방법"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv1" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_light"
                    android:includeFontPadding="false"
                    android:lineHeight="18dp"
                    android:text="| 루나컵 e-가이드북"
                    android:textColor="@color/gray_66"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv2"
                    app:layout_constraintStart_toEndOf="@+id/tv2" />

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/manage_content2"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv2" />

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/roboto_medium"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="1) 월경컵이 물에 충분히 잠길만한 머그컵에\n
     전기주전자로 끓인 물을 부어 5분간 열탕하거나\n\n
2) 냄비에 물을 끓여 월경컵을 잠기게끔 넣고\n
     냄비에 닿지 않도록 주의하여 3분간 열탕하거나\n\n
3) 전자레인지 사용이 가능한 용기에\n
     월경컵과 컵이 잠길 정도의 물을 넣어\n
     1분 30초간 열탕하면 됩니다."
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv4" />

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/roboto_regular"
                    android:includeFontPadding="false"
                    android:lineHeight="20dp"
                    android:text="@string/manage_content4"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:justificationMode="inter_word"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv5" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>